# extensible-app-hooks-rouille

./: README.md
app/: Cargo.toml
app/src/: lib.rs
app/src/templates/: index-front.hbs  index.hbs
app_model/: Cargo.toml
app_model/src/: lib.rs
app_registry/: Cargo.toml
app_registry/src/: hook_registry.rs  lib.rs  plugin_registry.rs  route_registry.rs
app_trait/: Cargo.toml
app_trait/src/: lib.rs
my_test_plugin/: Cargo.toml
my_test_plugin/src/: lib.rs
my_test_site/: Cargo.toml
my_test_site/src/: main.rs
